--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/7203172.js"></script>
+  <!-- End of HubSpot Embed Code -->
   </body>
 </html>
