add opengraph info

--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="https://res.cloudinary.com/liamcloud/image/upload/v1587127641/favicon-16x16_jdndwn.png" />
+    <link rel="apple-touch-icon" href="https://res.cloudinary.com/liamcloud/image/upload/v1587127641/favicon-16x16_jdndwn.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="liamedwards.co.uk"
-      content="Marketing Automation and Web Development"
+      content="Liam Edwards - Marketing Automation and Web Development"
     />
-    <link rel="apple-touch-icon" href="https://res.cloudinary.com/liamcloud/image/upload/v1587127641/favicon-16x16_jdndwn.png" />
+    <meta property="og:title" content="Liam Edwards - Marketing Automation and Web Development" />
+    <meta property="og:description" content="Marketing Automation Specalist who likes to code" />
+    <meta property="og:image" content="https://res.cloudinary.com/liamcloud/image/upload/v1587121605/main_fxnk8d.png" />    
     <title>Liam Edwards</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/7203172.js"></script>
-  <!-- End of HubSpot Embed Code -->
   </body>
 </html>
