add opengraph info

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
     />
     <meta property="og:title" content="Liam Edwards - Marketing Automation and Web Development" />
     <meta property="og:description" content="Marketing Automation Specalist who likes to code" />
-    <meta property="og:image" content="https://res.cloudinary.com/liamcloud/image/upload/v1587121605/main_fxnk8d.png" />    
+    <meta property="og:image" content="https://res.cloudinary.com/liamcloud/image/upload/v1587121605/main_fxnk8d.png" />  
+    <meta property="og:type" content="website" />  
+    <meta property="og:url" content="http://www.liamedwards.co.uk" />  
     <title>Liam Edwards</title>
   </head>
   <body>
